@@ -33,6 +33,7 @@
 #endif
 
 #include <sys/types.h>
+#include <arpa/inet.h> /* inet_addr */
 
 #include "transmission.h"
 #include "natpmp.h"
